<resources>
    <string name="app_name">TheHomyApp</string>
    <string name="welcome_to_thehomy">Welcome to TheHomy</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="india">India</string>
    <string name="indian_code">+91</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="didn_t_recieve_the_otp">Didn\'t recieve the OTP?</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_code_in">Resend code in %1$d seconds</string>
    <string name="location">Location</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="profile_image">Profile Image</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="name">Name</string>

</resources>