<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/app_theme">
    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_main"
        android:contentDescription="@string/app_name"/>
    <LinearLayout
        android:id="@+id/show_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        >


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome_to_thehomy"
        android:textAlignment="center"
        android:textColor="#ededed"
        android:textSize="30sp"
        />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="10dp"
            tools:ignore="TextSizeCheck"
            android:layout_margin="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/india"
                    android:src="@drawable/india"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/indian_code"
                    android:textColor="@color/app_theme"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    android:autofillHints="phone"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/enter_your_number"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/app_theme"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/get_otp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/app_theme_red"
                android:text="@string/get_verification_code"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                app:cornerRadius="5dp" />

            <ProgressBar
                android:id="@+id/progress_sendotp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>
    </LinearLayout>


</LinearLayout>